Refactor API Models, add descriptions
